# atompkg

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs  package_info.rs  packages.rs  semver.rs  util.rs
test_files/: packages.list
test_files/packages-all/atom-ide-ui/: package.json
test_files/packages-all/ex-mode/: package.json
test_files/packages-all/ide-typescript/: package.json
test_files/packages-all/language-rust/: package.json
test_files/packages-all/quick-highlight/: package.json
test_files/packages-all/slime/: package.json
test_files/packages-all/tsx-tags-autocomplete/: package.json
