[package]
name = "atompkg"
version = "0.1.0"
authors = ["Geordie Powers <geordie.powers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.60", features = ["derive"] }
serde_json = "1.0.40"
